--- a/add-remove-list-items/src/Components/Button/Button.css
+++ b/add-remove-list-items/src/Components/Button/Button.css
@@ -21,3 +21,10 @@
   background-color: rgb(218, 15, 15);
   margin: auto 10px 5px auto;
 }
+.addUserButton:hover, .addUserButton:active {
+  background-color: rgb(9, 63, 9);
+  float: right;
+}
+.deleteUserButton:hover, .mdeleteUserButton:active {
+  background-color: rgb(150, 11, 11);
+}
