--- a/add-remove-list-items/src/Components/UserCard/UserCard.css
+++ b/add-remove-list-items/src/Components/UserCard/UserCard.css
@@ -7,38 +7,11 @@
   box-sizing: border-box;
   overflow: hidden;
   align-content: left;
-  background-color: white;
+  background-color:rgb(250, 249, 249);
   display: flex;
   flex-direction: column;
 }
-.addressCompanyContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-}
-.addressContainer {
-  position: relative;
-  display: block;
-  float: left;
-  margin: 5px 10px 5px 0;
-  padding: 5px;
-  border: 1px solid rgb(231, 227, 227);
-}
-.companyContainer {
-  position: relative;
-  display: block;
-  margin: 5px 10px 5px 0;
-  padding: 5px;
-  border: 1px solid rgb(231, 227, 227);
-}
-a {
-  text-decoration: none;
-}
-.companyName {
-  color: rgba(3, 95, 3, 0.822);
-}
-.cardDeleteButtonContainer {
-  position: relative;
-  margin-bottom: 5px;
-  margin-top: auto;
-}
+.UserCard:hover {
+  box-shadow: 5px 6px 6px 6px #06751e;
+  transform: translateY(5px);
+} 
