--- a/next-atomic-airbnb-segment/next-atomic-airbnb-segment/src/molecules/PropertyCard/PropertyCard.module.css
+++ b/next-atomic-airbnb-segment/next-atomic-airbnb-segment/src/molecules/PropertyCard/PropertyCard.module.css
@@ -18,7 +18,14 @@
 .PropertyCardInfo {
   padding-left: 10px;
 }
-.PropertyCardInfo hr {
+.horizontalLine {
+  margin-top: 20px;
+  height: 2px;
+  width: 100%;
+  background-color: #DDDDDD;
+  border: none;
+}
+.PropertyCardInfo .horizontalLine {
   width: 40px;
   margin-left: 10px;
 }
@@ -38,11 +45,7 @@
   font-size: 18px;
   line-height: 24px 
 }
-.cardLine {
-  margin-top: 20px;
-  height: 1px;
-  width: 100%
-}
+
 
 @media (max-width: 1100px) {
 
