--- a/next-atomic-airbnb-segment/next-atomic-airbnb-segment/styles/Home.module.css
+++ b/next-atomic-airbnb-segment/next-atomic-airbnb-segment/styles/Home.module.css
@@ -1,25 +1,27 @@
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
+  /* padding: 0 0.5rem; */
+  /* display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: center; */
+  /* align-items: center; */
+  background-color: green;
+  background-image: url('../src/arvin-wiyono-einIuvtZen4-unsplash.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-
-.main {
+/* .main {
   padding: 5rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
+} */
 
 .footer {
   width: 100%;
   height: 100px;
-  border-top: 1px solid #eaeaea;
   display: flex;
   justify-content: center;
   align-items: center;
