--- a/next-atomic-airbnb-segment/next-atomic-airbnb-segment/src/molecules/GuestsNumberField/GuestsNumberField.module.css
+++ b/next-atomic-airbnb-segment/next-atomic-airbnb-segment/src/molecules/GuestsNumberField/GuestsNumberField.module.css
@@ -1,4 +1,4 @@
-.LocationSearchField {
+.GuestsNumberField {
   box-sizing: border-box;
   display: block;
   position: relative;
@@ -6,7 +6,7 @@
   padding: 0 30px;
   margin: 0;
 }
-.LocationSearchField:hover {
+.GuestsNumberField:hover {
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0.18);
   transition: background-color 0.2s ease;
