--- a/next-atomic-airbnb-segment/next-atomic-airbnb-segment/src/atoms/InputDate/InputDate.module.css
+++ b/next-atomic-airbnb-segment/next-atomic-airbnb-segment/src/atoms/InputDate/InputDate.module.css
@@ -2,6 +2,11 @@
   display: block;
   border: none;
   background-color: rgba(255,255,255, 0);
-  padding: 2px;
+  padding: 5px 0;
   outline: none;
+}
+@media (max-width: 770px) {
+  .InputDate {
+    width: 150px;
+  }
 }
