--- a/next-atomic-airbnb-segment/next-atomic-airbnb-segment/src/molecules/SearchFields/SearchFields.module.css
+++ b/next-atomic-airbnb-segment/next-atomic-airbnb-segment/src/molecules/SearchFields/SearchFields.module.css
@@ -3,10 +3,10 @@
   align-items: center;
   background-color: #FFFFFF;
   border: 1px solid #DDDDDD;
-  border-radius: 24px;
+  border-radius: 30px;
   color: #222222;
   vertical-align: middle;
-  padding: 10px;
+  padding: 0 10px;
   position: relative;
   white-space: nowrap;
   margin: 0;
