--- a/next-atomic-airbnb-segment/next-atomic-airbnb-segment/src/molecules/SearchPageHeaderCenter/SearchPageHeaderCenter.module.css
+++ b/next-atomic-airbnb-segment/next-atomic-airbnb-segment/src/molecules/SearchPageHeaderCenter/SearchPageHeaderCenter.module.css
@@ -2,4 +2,12 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 770px) {
+  .content {
+    justify-content: space-between;
+    padding: 0 10px;
+  }
 }
