--- a/next-atomic-airbnb-segment/next-atomic-airbnb-segment/src/organisms/SearchArea/SearchArea.module.css
+++ b/next-atomic-airbnb-segment/next-atomic-airbnb-segment/src/organisms/SearchArea/SearchArea.module.css
@@ -17,3 +17,14 @@
   height: 2px;
   border: none;
 }
+
+@media (max-width: 770px) {
+  .SearchArea {
+    display: flex;
+    flex-direction: column;
+  }
+  .SearchArea .horizontalLine {
+    transform: rotate(0deg);
+    width: 150px;
+  }
+}
