--- a/next-atomic-airbnb-segment/next-atomic-airbnb-segment/src/templates/SearchTemplate/SearchTemplate.module.css
+++ b/next-atomic-airbnb-segment/next-atomic-airbnb-segment/src/templates/SearchTemplate/SearchTemplate.module.css
@@ -3,9 +3,74 @@
 }
 .main {
   padding: 5rem 0;
+  height: 100%;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+.centralSection {
+  align-items: flex-start;
+  box-sizing: border-box;
+  color: rgb(72, 72, 72);
+  display: flex;
+  flex-direction: column;
+  font-family: Circular, -apple-system, system-ui, Roboto, "Helvetica Neue", sans-serif;
+  font-size: 14px;
+  height: 100%;
+  line-height: 20.02px;
+  position: relative;
+  text-size-adjust: 100%;
+  width: 100%;
+}
+.goNearContainer {
+  align-items: flex-start;
+  box-sizing: border-box;
+  color: rgb(72, 72, 72);
+  display: flex;
+  flex-direction: column;
+  font-family: "Helvetica Neue", sans-serif;
+  height: 100%;
+  text-align: start;
+  text-size-adjust: 100%;
+  width: 158.188px;
+}
+.goNearContainer p{
+  box-sizing: border-box;
+  color: rgb(255, 255, 255);
+  display: flex;
+  font-size: 108px;
+  font-weight: 800;
+  height: 184px;
+  letter-spacing: -2.16px;
+  line-height: 92.88px;
+  text-align: start;
+  text-size-adjust: 100%;
+  white-space: pre-line;
+  margin: 40px;
+}
+
+@media (max-width: 770px) {
+  .goNearContainer{
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+  .goNearContainer p{
+    width: 100%;
+    margin: 10px 0 20px 0;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 58px;
+    margin: 10px;
+  }
+  .exploreContainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
