--- a/next-atomic-airbnb-segment/next-atomic-airbnb-segment/src/organisms/Map/Map.module.css
+++ b/next-atomic-airbnb-segment/next-atomic-airbnb-segment/src/organisms/Map/Map.module.css
@@ -3,6 +3,10 @@
   font-size: 12px;
   padding: 3px 8px;
   border-radius: 30px;
+  margin: 20px;
+}
+.label:hover {
+  background-color: green
 }
 .labelSelected {
   background-color:black;
